force-app/main/default/objects/EA_Plan__c/EA_Plan__c.object-meta.xml
<CustomObject>
    <label>EA Plan</label>
    <nameField>
        <label>Financial Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EA Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>