force-app/main/default/objects/EA_Plan__c/fields/Hillrom_Objective_1__c.field-meta.xml
<CustomField>
    <fullName>Hillrom_Objective_1__c</fullName>
    <label>Hillrom Objective #1:</label>
    <type>TextArea</type>
</CustomField>