force-app/main/default/objects/EA_Plan__c/fields/Hillrom_Objective_2__c.field-meta.xml
<CustomField>
    <fullName>Hillrom_Objective_2__c</fullName>
    <label>Hillrom Objective #2:</label>
    <type>TextArea</type>
</CustomField>