force-app/main/default/objects/EA_Plan__c/fields/Hillrom_Objective_3__c.field-meta.xml
<CustomField>
    <fullName>Hillrom_Objective_3__c</fullName>
    <label>Hillrom Objective #3:</label>
    <type>TextArea</type>
</CustomField>