force-app/main/default/objects/EA_Plan__c/fields/IDN_Strategic_Overview__c.field-meta.xml
<CustomField>
    <fullName>IDN_Strategic_Overview__c</fullName>
    <label>IDN Strategic Overview</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>