force-app/main/default/objects/EA_Plan__c/fields/STRATEGY_1__c.field-meta.xml
<CustomField>
    <fullName>STRATEGY_1__c</fullName>
    <label>STRATEGY #1</label>
    <type>TextArea</type>
</CustomField>