force-app/main/default/objects/EA_Plan__c/fields/STRATEGY_2__c.field-meta.xml
<CustomField>
    <fullName>STRATEGY_2__c</fullName>
    <label>STRATEGY #2</label>
    <type>TextArea</type>
</CustomField>