force-app/main/default/objects/EA_Plan__c/fields/STRATEGY_3__c.field-meta.xml
<CustomField>
    <fullName>STRATEGY_3__c</fullName>
    <label>STRATEGY #3</label>
    <type>TextArea</type>
</CustomField>